--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-lg-6">
         <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-button"><span class="fa-brands fa-apple"></span> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+<!--         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button> -->
       </div>
       <div class="col-lg-6">
         <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
