--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
     <button type="button" class="btn btn-light btn-lg cta-buttons"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
+  <div class="feature-box col-lg-4">
+        <i class="fa-solid fa-heart feature-icons fa-4x"></i>
+        <h3 class="feature-titles">Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+   </div>
 
 
   <!-- Footer -->
